--- a/frontend/src/assets/style.css
+++ b/frontend/src/assets/style.css
@@ -1,141 +1,127 @@
-/*
-Common
-************************************/
-
 html,
 body {
-    height: 100%;
-    font-family: sans-serif;
-}
-
-.content {
-    width: 600px;
-    height: 100%;
-    margin: 0 auto;
-    border-left: 1px solid #ccc;
-    border-right: 1px solid #ccc;
-}
-
-@media screen and (max-width: 500px) {
-}
-
-/*
-Posts
-************************************/
-
-.post_form {
-    padding: 20px;
-    border-bottom: 1px solid #ccc;
-}
-
-.post_form input {
-    width: 96%;
-    margin-bottom: 10px;
-    padding: 10px;
-    border: 1px solid #ccc;
-}
-
-.post_form textarea {
-    width: 96%;
-    margin-bottom: 10px;
-    padding: 10px;
-    border: 1px solid #ccc;
-}
-
-.post_form .upload-area {
-    width: 96%;
-    margin-bottom: 10px;
-    padding: 10px;
-    border: 1px solid #ccc;
-    text-align: center;
-}
-
-.post_form button {
     width: 100%;
-    padding: 10px;
-    border: 1px solid #ccc;
-    cursor: pointer;
+    color: white;
+    background-color: black;
 }
-
-.upload-image {
-    width: 50%;
-}
-
-.posts ul {
-    padding: 0;
-}
-
-.posts li {
-    position: relative;
+/********
+ Navbar 
+ ********/
+.header {
     display: flex;
-    border-bottom: 1px solid #ccc;
-    padding: 20px 40px;
-    list-style: none;
+    justify-content: space-between;
+    padding-right: 3%;
+    z-index: 1;
 }
-
-.posts li .menu_icon {
-    width: 20px;
+.Navbar {
+    position: relative;
+}
+.header .logo {
+    margin-left: 10px;
+}
+.header .nav1 {
+    display: flex;
+    justify-content: space-between;
+}
+.nav1 {
+    display: flex;
+}
+.nav1 .search-bar {
+    display: flex;
+    justify-content: flex-start;
     height: 20px;
-    position: absolute;
-    right: 30px;
-    top: 18px;
-    cursor: pointer;
+    position: relative;
+    top: 8%;
+    padding-right: 5%;
+    margin-right: 2%;
 }
-
-.posts li .menu {
+.search-bar input {
+    background-color: black;
+    padding: 1px;
+    top: 7%;
     position: absolute;
-    top: 40px;
-    right: 15px;
-    border: 1px solid #ccc;
-    background-color: white;
-    padding: 10px 15px;
-    font-size: 13px;
-    border-radius: 3px;
-    cursor: pointer;
+    right: 11%;
 }
+.search-bar .search-img {
+    display: flex;
+    justify-content: flex-end;
+    position: absolute;
+    right: 0%;
+}
+.Category {
+    height: 23px;
+    color: white;
+    background-color: black;
+    margin-top: 2%;
+    padding: 2%;
+}
+.favorites {
+    margin-top: 1%;
+    margin-right: 1%;
+    padding: 2%;
+}
+.poster-img {
+    width: 100%;
+    position: relative;
+}
+/******
+content 
+*******/
 
-.posts li img {
+h1 {
+    font-size: 32px;
+}
+.Movies {
+    display: flex;
+}
+.Movies-poster {
+    position: relative;
+}
+.like-icon {
+    position: absolute;
+    top: 5px;
+    right: 5px;
+}
+.Movies-info {
+    height: 550px;
+    width: 320px;
+    margin: 10px;
+}
+.Movies-img {
+    height: 80%;
     width: 100%;
 }
-
-.posts li .menu a {
-    text-decoration: none;
+.ratings-trailer {
+    display: flex;
+    justify-content: space-between;
 }
-
-.posts li .logo {
-    flex-basis: 15%;
+.star {
+    height: 4vh;
 }
-
-.posts li .logo img {
-    width: 60%;
+.ratings {
+    padding-right: 50%;
+    padding-top: 2%;
 }
-
-.posts li .name_body {
-    flex-basis: 85%;
+.date {
+    padding-top: 3%;
 }
-
-.posts li .name_body .name {
-    font-weight: bold;
-    margin-bottom: 10px;
+.trailer-button img {
+    height: 5vh;
 }
-
-.posts li .name_body .body {
-    margin: 10px 0px;
+.extra-info {
+    display: flex;
 }
-
-.posts li .name_body .datetime {
-    color: gray;
-    margin-bottom: 10px;
+/* Footer */
+.Footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: black;
 }
-
-.no-post {
-    text-align: center;
+.logo {
+    margin-left: 10px;
 }
-
-.no-post p {
-    margin: 0px 0px;
-}
-
-.loading {
-    text-align: center;
+.logo img {
+    height: 30px;
 }
