--- a/frontend/src/assets/style.css
+++ b/frontend/src/assets/style.css
@@ -3,66 +3,63 @@ body {
     width: 100%;
     color: white;
     background-color: black;
+    margin: 0;
+    padding: 0;
 }
 /********
  Navbar 
  ********/
-.header {
-    display: flex;
-    justify-content: space-between;
-    padding-right: 3%;
-    z-index: 1;
-}
-.Navbar {
-    position: relative;
-}
-.header .logo {
-    margin-left: 10px;
-}
-.header .nav1 {
-    display: flex;
-    justify-content: space-between;
-}
-.nav1 {
-    display: flex;
-}
-.nav1 .search-bar {
-    display: flex;
-    justify-content: flex-start;
-    height: 20px;
-    position: relative;
-    top: 8%;
-    padding-right: 5%;
-    margin-right: 2%;
-}
-.search-bar input {
-    background-color: black;
-    padding: 1px;
-    top: 7%;
-    position: absolute;
-    right: 11%;
-}
-.search-bar .search-img {
-    display: flex;
-    justify-content: flex-end;
-    position: absolute;
-    right: 0%;
-}
-.Category {
-    height: 23px;
-    color: white;
-    background-color: black;
-    margin-top: 2%;
-    padding: 2%;
-}
-.favorites {
-    margin-top: 1%;
-    margin-right: 1%;
-    padding: 2%;
-}
-.poster-img {
+nav {
     width: 100%;
+    height: 6%;
+    display: flex;
+}
+nav .right-nav {
+    width: 70%;
+    background-color: black;
+}
+nav .left-nav {
+    padding-top: 1%;
+    width: 30%;
+    background-color: black;
+}
+
+nav .left-nav img {
+    width: 24%;
+    margin: 0 0 0 3%;
+}
+.cat h1 {
+    font-size: 1vw;
+    color: white;
+}
+nav .right-nav .container {
+    display: flex;
+    gap: 2%;
+    justify-content: right;
+    align-items: center;
+    padding: 1% 1% 1% 0;
+}
+nav .right-nav .container .cat {
+    display: flex;
+    gap: 3%;
+}
+nav .right-nav .container .cat img {
+    width: 26%;
+}
+nav .right-nav .container input {
+    width: 26%;
+    border-radius: 10px;
+    border: 1px solid lightslategray;
+    padding: 1% 0;
+    background: black;
     position: relative;
+}
+
+#ip {
+    background: url(img/search_white_48dp.svg) right no-repeat;
+    background-size: 10%;
+    width: 100%;
+    color: white;
 }
 /******
 content 
@@ -72,8 +69,16 @@ h1 {
     font-size: 32px;
 }
 .Movies {
-    display: flex;
+    width: 100%;
 }
+.movie {
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+}
+.content {
+    width: 100%;
+}
+
 .Movies-poster {
     position: relative;
 }
@@ -85,7 +90,7 @@ h1 {
 .Movies-info {
     height: 550px;
     width: 320px;
-    margin: 10px;
+    margin: 15px;
 }
 .Movies-img {
     height: 80%;
@@ -96,14 +101,17 @@ h1 {
     justify-content: space-between;
 }
 .star {
-    height: 4vh;
+    height: 3vh;
 }
 .ratings {
-    padding-right: 50%;
+    /* padding-right: 50%; */
     padding-top: 2%;
 }
 .date {
     padding-top: 3%;
+}
+.trailer-button {
+    height: 7vh;
 }
 .trailer-button img {
     height: 5vh;
@@ -124,4 +132,23 @@ h1 {
 }
 .logo img {
     height: 30px;
+}
+
+@media screen and (max-width: 500px) and (min-width: 200px) {
+    .movie {
+        display: grid;
+        grid-template-columns: auto auto;
+    }
+}
+@media screen and (max-width: 700px) and (min-width: 500px) {
+    .movie {
+        display: grid;
+        grid-template-columns: auto auto auto;
+    }
+}
+
+@media screen and (max-width: 200px) {
+    .movie {
+        display: grid;
+    }
 }
