--- a/frontend/src/assets/style.css
+++ b/frontend/src/assets/style.css
@@ -6,6 +6,40 @@ body {
     margin: 0;
     padding: 0;
 }
+/*******
+Cover
+*******/
+.main-cover {
+    width: 100%;
+}
+.cover {
+    width: 100%;
+    height: 90vh;
+    background-image: url(img/no-time-to-die-poster.png);
+    background-size: 100% 100%;
+    position: relative;
+}
+.cover-info {
+    position: absolute;
+    bottom: 1%;
+}
+.description {
+    bottom: 0;
+    background-color: rgb(75, 70, 65);
+    width: 100%;
+    font-size: large;
+    margin-left: 11%;
+}
+.cover-info img {
+    margin-left: 10%;
+}
+.cover-info pre {
+    margin-left: 11%;
+}
+.cover pre {
+    color: white;
+}
+
 /********
  Navbar 
  ********/
@@ -60,6 +94,7 @@ nav .right-nav .container input {
     background-size: 10%;
     width: 100%;
     color: white;
+    height: 2vh;
 }
 /******
 content 
@@ -67,6 +102,7 @@ content
 
 h1 {
     font-size: 32px;
+    margin-left: 3%;
 }
 .Movies {
     width: 100%;
@@ -74,6 +110,7 @@ h1 {
 .movie {
     display: grid;
     grid-template-columns: auto auto auto auto;
+    margin-left: 2%;
 }
 .content {
     width: 100%;
