--- a/frontend/src/assets/style.css
+++ b/frontend/src/assets/style.css
@@ -174,7 +174,7 @@ h1 {
     height: 30px;
 }
 
-@media screen and (min-width: 1065px) {
+@media screen and (max-width: 1065px) {
     .movie {
         display: grid;
         grid-template-columns: repeat(3, 1fr);
