--- a/frontend/src/assets/style.css
+++ b/frontend/src/assets/style.css
@@ -180,7 +180,7 @@ h1 {
         grid-template-columns: repeat(3, 1fr);
     }
 }
-@media screen and (max-width: 1060px) {
+@media screen and (min-width: 1060px) {
     .movie {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
