--- a/frontend/src/assets/style.css
+++ b/frontend/src/assets/style.css
@@ -173,20 +173,19 @@ h1 {
 .logo img {
     height: 30px;
 }
-
-@media screen and (max-width: 1065px) {
+@media screen and (min-width: 1024px) and (max-width: 1281px) {
     .movie {
         display: grid;
         grid-template-columns: repeat(3, 1fr);
     }
 }
-@media screen and (min-width: 1060px) {
+@media screen and (min-width: 700px) and (max-width: 1023px) {
     .movie {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
     }
 }
-@media screen and (max-width: 727px) {
+@media screen and (max-width: 700px) {
     .movie {
         display: grid;
         grid-template-columns: repeat(1, 1fr);
