--- a/frontend/src/assets/style.css
+++ b/frontend/src/assets/style.css
@@ -14,7 +14,7 @@ Cover
 }
 .cover {
     width: 100%;
-    height: 90vh;
+    height: 100vh;
     background-image: url(img/no-time-to-die-poster.png);
     background-size: 100% 100%;
     position: relative;
@@ -128,8 +128,9 @@ h1 {
     right: 5px;
 }
 .Movies-info {
-    height: 550px;
-    width: 320px;
+    /* height: 550px; */
+    width: 90%;
+    /* width: 320px; */
     margin: 15px;
 }
 .Movies-img {
