--- a/frontend/src/assets/style.css
+++ b/frontend/src/assets/style.css
@@ -12,17 +12,11 @@ Cover
 .main-cover {
     width: 100%;
 }
-.cover {
+.cover img {
     width: 100%;
-    height: 100vh;
-    background-image: url(img/no-time-to-die-poster.png);
-    background-size: 100% 100%;
     position: relative;
 }
-.cover-info {
-    position: absolute;
-    bottom: 1%;
-}
+
 .description {
     bottom: 0;
     background-color: rgb(75, 70, 65);
@@ -42,7 +36,9 @@ Cover
 .cover pre {
     color: white;
 }
-
+.grid .Movies-info {
+    width: 450px;
+}
 /********
  Navbar 
  ********/
