--- a/frontend/src/assets/style.css
+++ b/frontend/src/assets/style.css
@@ -12,17 +12,22 @@ Cover
 .main-cover {
     width: 100%;
 }
-.cover img {
-    width: 100%;
+.cover {
     position: relative;
 }
-
+.cover img {
+    width: 100%;
+}
+.cover-info {
+    position: absolute;
+    bottom: 6px;
+    height: auto;
+}
 .description {
-    bottom: 0;
     background-color: rgb(75, 70, 65);
     width: auto;
-    font-size: large;
-    margin-left: 11%;
+    font-size: small;
+    margin: 0% 0% 0% 11%;
 }
 .cover-info img {
     margin-left: 10%;
@@ -30,14 +35,14 @@ Cover
     width: auto;
 }
 .cover-info pre {
-    margin-left: 11%;
+    margin: 0% 0% 0% 11%;
     width: auto;
 }
 .cover pre {
     color: white;
 }
 .grid .Movies-info {
-    width: 450px;
+    width: 350px;
 }
 /********
  Navbar 
