--- a/frontend/src/assets/style.css
+++ b/frontend/src/assets/style.css
@@ -24,11 +24,11 @@ Cover
 .cover img {
     width: 100%;
 }
-.cover-info {
+/* .cover-info {
     position: absolute;
     bottom: 6px;
     height: auto;
-}
+} */
 .description {
     background-color: rgb(75, 70, 65);
     width: auto;
@@ -197,5 +197,12 @@ h1 {
     .movie {
         display: grid;
         grid-template-columns: repeat(1, 1fr);
+    }
+}
+@media screen and (min-width: 500px) {
+    .cover-info{
+        position: absolute;
+        bottom: 6px;
+        height: auto;
     }
 }
